--- a/package.json
+++ b/package.json
@@ -8,15 +8,13 @@
   "bin": "./bin/proxy.js",
   "repository": "meishuu/tera-proxy",
   "dependencies": {
+    "argparse": "^1.0.9",
     "baldera-logger": "meishuu/baldera-logger",
+    "js-yaml": "^3.8.3",
     "tera-data": "meishuu/tera-data",
     "tera-proxy-game": "meishuu/tera-proxy-game",
     "tera-proxy-sls": "meishuu/tera-proxy-sls",
     "write-file-atomic": "^1.3.1"
-  },
-  "optionalDependencies": {
-    "argparse": "^1.0.9",
-    "js-yaml": "^3.8.3"
   },
   "engines": {
     "node": ">=6.0.0"
