--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,15 +13,13 @@ main:
 
 # changes links
 changes:
-  - title: "Pre-release"
-    children:
-      - title: "1.0.0"
-        url: /changes/v1.0.0-pre/
   - title: "Current Patch"
+    children:
+      - title: "1.0.0 – Velik's Hold"
+        url: /changes/v1.0.0/
+  - title: "Old Versions"
     children:
       - title: "0.2.0 - Valkyrie"
         url: /changes/v0.2.0/
-  - title: "Old Versions"
-    children:
       - title: "0.1.0"
         url: /changes/v0.1.0/
